Remove border on inputs to avoid jumping pixels when transitioning between non-interactive and interactive modes
This might not be ideal. It should probably show a border in interactive and non-interactive modes to make the pixels consistent.

--- a/src/design-studies/columns.css
+++ b/src/design-studies/columns.css
@@ -60,6 +60,7 @@
 }
 
 .input-cell-interactive {
+  border: 0;
   box-sizing: border-box;
   font-family: inherit;
   font-size: 14px;
